--- a/tutorialthree.html
+++ b/tutorialthree.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Golden Quadrilateral of India</title> //Depicted by a highlighted point marker and a polyline
+  <title>Golden Quadrilateral of India</title> 
   <style>
     html, body, #viewDiv {
       padding: 0;
@@ -33,7 +33,7 @@
 
   const view = new MapView({
     map: map,
-    center: [77.1025, 28.7041], //Longitude, latitude
+    center: [77.412613, 23.259933], //Longitude, latitude
     zoom: 5,
     container: "viewDiv"
  });
