--- a/tutorialtwo.html
+++ b/tutorialtwo.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Golden Quadrilateral Of India</title>
+  <title>ArcGIS Maps SDK for Javascript Tutorials: Add a point, line, and polygon</title>
   <style>
     html, body, #viewDiv {
       padding: 0;
