--- a/tutorialone.html
+++ b/tutorialone.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>ArcGIS Maps SDK for Javascript Tutorials: Add a point, line, and polygon</title>
+  <title>ArcGIS Maps SDK for Javascript Tutorials: Display a map (2D)</title>
   <style>
     html,
     body,
