--- a/tutorialfourbonus.html
+++ b/tutorialfourbonus.html
@@ -46,15 +46,15 @@
  const polyline = {
     type: "polyline",
     paths: [
-        [-93.091301, 44.954445], //Longitude, latitude Saint Paul
-        [-84.388168, 33.748783], //Longitude, latitude Atlanta, Georgia
-        [18.423300,  -33.918861], //Longitude, latitude CapeTown
-        [42.7539, 44.0225], //Longitude, latitude Yasnaya Polyana
-        [37.618423, 55.751244], //Longitude, latitude Moscow
-        [10.757933, 59.911491], //Longitude, latitude Norway
-        [-9.598107, 30.427755], // Longitude, latitude Agadir, Morroco
-        [ -66.9167,  52.9500], //Longitude, latitude Labrador City
-        [-93.091301, 44.954445], //Longitude, latitude  Saint Paul
+        [-93.091301, 44.954445], //Longitude, latitude; F. Scott Fitzgerald from Saint Paul
+        [-84.388168, 33.748783], //Longitude, latitude; Margaret Mitchell from  Atlanta, Georgia
+        [18.423300,  -33.918861], //Longitude, latitude; Herman Charles Bosman from, CapeTown, South Africa 
+        [42.7539, 44.0225], //Longitude, latitude; Leo Tolstoy from Yasnaya Polyana, Russia
+        [37.618423, 55.751244], //Longitude, latitude; Boris Pasternak Moscow, Russia
+        [10.757933, 59.911491], //Longitude, latitude; Bjørnstjerne Bjørnson from Norway
+        [-9.598107, 30.427755], // Longitude, latitude; Mohamed Chafik from Agadir, Morroco
+        [ -66.9167,  52.9500], //Longitude, latitude;  Barbara W. Tuchman from Labrador City
+        [-93.091301, 44.954445], //Longitude, latitude; F. Scott Fitzgerald from Saint Paul
         
 
     ]
