--- a/tutorialfourbonus.html
+++ b/tutorialfourbonus.html
@@ -61,7 +61,7 @@
  };
  const simpleLineSymbol = {
     type: "simple-line",
-    color: [255, 0, 0], // Dark Green
+    color: [255, 0, 0], // Red
     width: 2
  };
 
