--- a/tutorialone.html
+++ b/tutorialone.html
@@ -27,7 +27,7 @@
 
       esriConfig.apiKey = "AAPK5f27c0835fd948088e6b7afd302f49abBipUoehURImUblZNbqkrDUbES8zO4QW9qytIfhp7nhLUuVK0jv2-Pn4WKRNKRXdc";
       const map = new Map({
-        basemap: "arcgis-topographic" // Basemap layer
+        basemap: "arcgis-imagery" // Basemap layer
       });
 
       const view = new MapView({
