--- a/tutorialfourbonus.html
+++ b/tutorialfourbonus.html
@@ -28,7 +28,7 @@
   esriConfig.apiKey = "AAPK5f27c0835fd948088e6b7afd302f49abBipUoehURImUblZNbqkrDUbES8zO4QW9qytIfhp7nhLUuVK0jv2-Pn4WKRNKRXdc";
 
   const map = new Map({
-    basemap: "arcgis/topographic" // basemap styles service
+    basemap: "arcgis-navigation" // basemap styles service
   });
 
   const view = new MapView({
